--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -2,11 +2,11 @@
  * Syntax highlighting styles
  */
 .highlight {
-    background: #000;
+    background: #fff;
     @extend %vertical-rhythm;
 
     .highlighter-rouge & {
-      background: #000;
+      background: #eef;
     }
 
     .c     { color: #998; font-style: italic } // Comment
