--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -100,6 +100,7 @@
 .site-footer {
     border-top: 1px solid $grey-color-light;
     padding: $spacing-unit 0;
+    
 }
 
 .footer-heading {
@@ -127,19 +128,15 @@
 }
 
 .footer-col-1 {
-    width: -webkit-calc(35% - (#{$spacing-unit} / 2));
-    width:         calc(35% - (#{$spacing-unit} / 2));
+    width: -webkit-calc(50% - (#{$spacing-unit} / 2));
+    width:         calc(50% - (#{$spacing-unit} / 2));
 }
 
 .footer-col-2 {
-    width: -webkit-calc(20% - (#{$spacing-unit} / 2));
-    width:         calc(20% - (#{$spacing-unit} / 2));
+    width: -webkit-calc(50%- (#{$spacing-unit} / 2));
+    width:         calc(50% - (#{$spacing-unit} / 2));
 }
 
-.footer-col-3 {
-    width: -webkit-calc(45% - (#{$spacing-unit} / 2));
-    width:         calc(45% - (#{$spacing-unit} / 2));
-}
 
 @include media-query($on-laptop) {
     .footer-col-1,
@@ -167,8 +164,10 @@
 /**
  * Page content
  */
+
 .page-content {
     padding: $spacing-unit 0;
+    flex: 1;
 }
 
 .page-heading {
@@ -192,6 +191,7 @@
 .post-link {
     display: block;
     font-size: 24px;
+    padding: 98px;
 }
 
 
@@ -199,6 +199,24 @@
 /**
  * Posts
  */
+.post{
+    background-color : #f7f3ee;
+    border: 1px solid #decfba;
+    margin-top: 16px;
+    
+    padding: 64px 96px 16px 96px;
+    border-radius: 4px;
+    border-top: 3px solid #c72323;
+}
+.post-li{
+    background-color : #f7f3ee;
+    border: 1px solid #decfba;
+    margin: 16px 192px 0 0  ;
+    
+    padding: 16px 96px 16px 96px;
+    border-radius: 4px;
+    border-top: 3px solid #c72323;
+}
 .post-header {
     margin-bottom: $spacing-unit;
 }
